# PaperSynth

./: .gitignore  .gitmodules  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/papersynth/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FFTUtil.cpp  FFTUtil.h  FourierSeries.cpp  FourierSeries.h  PaperSynthEngine.cpp  PaperSynthEngine.h  PaperSynthLatencyTuningCallback.cpp  PaperSynthLatencyTuningCallback.h  PaperSynthMixer.cpp  PaperSynthMixer.h  PaperSynthOscillator.cpp  PaperSynthOscillator.h  PaperSynthSoundGenerator.cpp  PaperSynthSoundGenerator.h  jni-bridge.cpp
app/src/main/java/com/example/papersynth/: CanvasFragment.kt  CanvasView.kt  MainActivity.kt  OscillatorCanvasActivity.kt  PlaybackEngine.kt
app/src/main/java/com/example/papersynth/activities/: MainActivity.kt  OscillatorCanvasActivity.kt
app/src/main/java/com/example/papersynth/dataclasses/: AlphaArray.kt  FourierSeries.kt  Oscillator.kt  PixelsArray.kt  TextToDraw.kt
app/src/main/java/com/example/papersynth/enums/: MusicalScale.kt
app/src/main/java/com/example/papersynth/fragments/: CanvasFragment.kt  OscillatorCanvasFragment.kt  ScalesDialog.kt
app/src/main/java/com/example/papersynth/jni/: FFT.kt  PlaybackEngine.kt
app/src/main/java/com/example/papersynth/utils/: CurveFittingUtil.kt  FileUtil.kt  FileWriterUtil.kt  MathUtil.kt
app/src/main/java/com/example/papersynth/viewmodels/: ScaleViewModel.kt
app/src/main/java/com/example/papersynth/views/: CanvasView.kt  OscillatorCanvasView.kt  TextToDraw.kt
app/src/main/res/layout/: activity_main.xml  activity_oscillator_canvas.xml  fragment_canvas.xml  fragment_oscillator_canvas.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/papersynth/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
